# Random_walk_on_plates

./: .gitignore  AGENTS.md  README.md  benchmark_wop_cpp_speed.ipynb  compare_wop_cpp_python.ipynb  compare_wop_cpp_rmax_modes.ipynb  wop-vs-wos-cpp-unit-cube.ipynb
docs/: index.md  problem-and-geometry.md  sampling-and-densities.md  validation-and-tests.md  wop-method.md  wop-problem.md  wop-proof-escape-project.md  wos-method.md
external_wop/: README.md  pyproject.toml
external_wop/docs/: walk_on_planes_dirichlet_R3.md
external_wop/tests/: test_cli_rmax_options.py  test_cpp_cli_parity.py  test_cpp_wop_wos_notebook.py  test_plane_sampler.py  test_tangent_sampler.py  test_visualization_mesh.py  test_wop_distance_scan.py  test_wop_exact_solution.py  test_wop_rmax_modes.py  test_wop_vs_wos_box.py  test_workspace_layout.py  test_wos_lecture_external.py
external_wop/try/: check_cube_exact.py  try_visualise.py  wop_python_cpp_benchmark.ipynb
external_wop/wop/: __init__.py  argparse_utils.py  cli.py  estimation.py  geometry.py  sampling.py  visualization.py  wop.py  wos_box.py
external_wop_cpp/: CMakeLists.txt
external_wop_cpp/app/: main.cpp  problem_functions.cpp
external_wop_cpp/examples/: README.md  box_wop.yaml  box_wop_legacy_equivalent.yaml  box_wos.yaml
external_wop_cpp/include/wop/config/: config.hpp  expression.hpp  problem_functions.hpp  run_config.hpp
external_wop_cpp/include/wop/estimation/: estimation.hpp
external_wop_cpp/include/wop/geometry/: box.hpp  polyhedron.hpp
external_wop_cpp/include/wop/math/: vec3.hpp
external_wop_cpp/include/wop/rng/: rng.hpp
external_wop_cpp/include/wop/sampling/: sampling.hpp
external_wop_cpp/include/wop/solver/: solver_common.hpp  wop_solver.hpp  wop_solver_internal.hpp  wos_box_solver.hpp  wos_solver.hpp
external_wop_cpp/src/config/: config.cpp  expression.cpp  run_config.cpp
external_wop_cpp/src/estimation/: estimation.cpp
external_wop_cpp/src/geometry/: box.cpp  polyhedron.cpp
external_wop_cpp/src/math/: vec3.cpp
external_wop_cpp/src/rng/: rng.cpp
external_wop_cpp/src/sampling/: sampling.cpp
external_wop_cpp/src/solver/: solver_common.cpp  wop_solver.cpp  wop_solver_internal.cpp  wos_box_solver.cpp  wos_solver.cpp
external_wop_cpp/tests/: test_config_runtime.cpp  test_core_smoke.cpp  test_sampling_stats.cpp  test_wop_pipeline_stages.cpp  test_wop_rmax_modes.cpp  test_wos_lecture_external.cpp
